# va

./: .env.example  .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  PORT_SECURITY_GUIDE.md  README.md  config.example.json  config.json.backup_1758584634_572351  dev-server.py  metrics.json  pyproject.toml  start-dev.bat  test_metrics.json
.bmad-infrastructure-devops/: install-manifest.yaml
.github/workflows/: ci-cd.yml
docs/: architecture.md  oauth-setup-guide.md
docs/architecture/: conclusion.md  core-components.md  critical-success-factors.md  data-models-minimal-for-mvp.md  deployment-architecture.md  development-workflow.md  executive-summary.md  expansion-architecture-strategy.md  high-level-architecture.md  index.md  monitoring-and-observability.md  mvp-scope-definition.md  risk-mitigation.md  security-and-compliance.md  simplified-api-specification.md  technology-stack.md
docs/prd/: checklist-results-report.md  epic-1-foundation-emr-integration-updated.md  epic-2-voice-interface-basic-appointment-scheduling-updated.md  epic-3-administrative-interface-system-management.md  epic-4-production-readiness-pilot-deployment.md  epic-5-documentation-developer-experience.md  epic-details.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/setup/: README.md  (+6 more)
src/: __init__.py  audit.py  config.py  main.py  settings.py
static/: appointment-management.css  appointment-management.js  configuration-wizard.css  configuration-wizard.js  dashboard.html  dashboard.js  health-monitoring.css  health-monitoring.js
tests/: __init__.py
(+109 files in other folders)
